--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,10 @@ geopy = "^2.4.1"
 tqdm = "^4.67.1"
 logger = "^1.4"
 pydantic = "^2.10.4"
+fuzzywuzzy = "^0.18.0"
+python-levenshtein = "^0.26.1"
+openpyxl = "^3.1.5"
+stargazer = "^0.0.7"
 
 
 [tool.poetry.group.dev.dependencies]
